feat: refactor product handling to support slug in routes and database
